<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_large"
    android:paddingTop="@dimen/spacing_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_register_nickname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_nickname_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_register_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/login_email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/login_password_hint"
        app:endIconMode="password_toggle"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_register_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/register_confirm_password_hint"
        app:endIconMode="password_toggle"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_register_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:textColor="@color/error"
        android:textSize="@dimen/text_small"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/register_goto_login"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/text_small" />

</LinearLayout>
